parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> NAME EQUALS expression
Rule 5     statement -> WAIT LPAREN expression RPAREN
Rule 6     statement -> WAIT_MOTION LPAREN RPAREN
Rule 7     statement -> FOR LPAREN statement COMMA expression COMMA statement RPAREN LBRACE statements RBRACE
Rule 8     statement -> SET_REG_8BIT LPAREN expression COMMA expression RPAREN
Rule 9     statement -> SET_REG_16BIT LPAREN expression COMMA expression RPAREN
Rule 10    statement -> SET_REG_32BIT LPAREN expression COMMA expression RPAREN
Rule 11    statement -> POS_RAMP LPAREN expression COMMA expression RPAREN
Rule 12    statement -> SPD_RAMP LPAREN expression COMMA expression RPAREN
Rule 13    statement -> TORQ_RAMP LPAREN expression COMMA expression RPAREN
Rule 14    statement -> expression
Rule 15    expression -> expression PLUS expression
Rule 16    expression -> expression MINUS expression
Rule 17    expression -> expression TIMES expression
Rule 18    expression -> expression DIVIDE expression
Rule 19    expression -> expression LT expression
Rule 20    expression -> expression GT expression
Rule 21    expression -> expression EQ expression
Rule 22    expression -> expression NE expression
Rule 23    expression -> expression LE expression
Rule 24    expression -> expression GE expression
Rule 25    expression -> MINUS expression
Rule 26    expression -> LPAREN expression RPAREN
Rule 27    expression -> NUMBER
Rule 28    expression -> NAME
Rule 29    expression -> GET_REG LPAREN expression COMMA expression RPAREN

Terminals, with rules where they appear

COMMA                : 7 7 8 9 10 11 12 13 29
DIVIDE               : 18
EQ                   : 21
EQUALS               : 4
FOR                  : 7
GE                   : 24
GET_REG              : 29
GT                   : 20
LBRACE               : 7
LE                   : 23
LPAREN               : 5 6 7 8 9 10 11 12 13 26 29
LT                   : 19
MINUS                : 16 25
NAME                 : 4 28
NE                   : 22
NUMBER               : 27
PLUS                 : 15
POS_RAMP             : 11
RBRACE               : 7
RPAREN               : 5 6 7 8 9 10 11 12 13 26 29
SET_REG_16BIT        : 9
SET_REG_32BIT        : 10
SET_REG_8BIT         : 8
SPD_RAMP             : 12
TIMES                : 17
TORQ_RAMP            : 13
WAIT                 : 5
WAIT_MOTION          : 6
error                : 

Nonterminals, with rules where they appear

expression           : 4 5 7 8 8 9 9 10 10 11 11 12 12 13 13 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 26 29 29
program              : 0
statement            : 2 3 7 7
statements           : 1 2 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . NAME EQUALS expression
    (5) statement -> . WAIT LPAREN expression RPAREN
    (6) statement -> . WAIT_MOTION LPAREN RPAREN
    (7) statement -> . FOR LPAREN statement COMMA expression COMMA statement RPAREN LBRACE statements RBRACE
    (8) statement -> . SET_REG_8BIT LPAREN expression COMMA expression RPAREN
    (9) statement -> . SET_REG_16BIT LPAREN expression COMMA expression RPAREN
    (10) statement -> . SET_REG_32BIT LPAREN expression COMMA expression RPAREN
    (11) statement -> . POS_RAMP LPAREN expression COMMA expression RPAREN
    (12) statement -> . SPD_RAMP LPAREN expression COMMA expression RPAREN
    (13) statement -> . TORQ_RAMP LPAREN expression COMMA expression RPAREN
    (14) statement -> . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression EQ expression
    (22) expression -> . expression NE expression
    (23) expression -> . expression LE expression
    (24) expression -> . expression GE expression
    (25) expression -> . MINUS expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . NAME
    (29) expression -> . GET_REG LPAREN expression COMMA expression RPAREN

    NAME            shift and go to state 4
    WAIT            shift and go to state 6
    WAIT_MOTION     shift and go to state 8
    FOR             shift and go to state 9
    SET_REG_8BIT    shift and go to state 10
    SET_REG_16BIT   shift and go to state 11
    SET_REG_32BIT   shift and go to state 12
    POS_RAMP        shift and go to state 13
    SPD_RAMP        shift and go to state 14
    TORQ_RAMP       shift and go to state 15
    MINUS           shift and go to state 16
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 17
    GET_REG         shift and go to state 18

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 5

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . NAME EQUALS expression
    (5) statement -> . WAIT LPAREN expression RPAREN
    (6) statement -> . WAIT_MOTION LPAREN RPAREN
    (7) statement -> . FOR LPAREN statement COMMA expression COMMA statement RPAREN LBRACE statements RBRACE
    (8) statement -> . SET_REG_8BIT LPAREN expression COMMA expression RPAREN
    (9) statement -> . SET_REG_16BIT LPAREN expression COMMA expression RPAREN
    (10) statement -> . SET_REG_32BIT LPAREN expression COMMA expression RPAREN
    (11) statement -> . POS_RAMP LPAREN expression COMMA expression RPAREN
    (12) statement -> . SPD_RAMP LPAREN expression COMMA expression RPAREN
    (13) statement -> . TORQ_RAMP LPAREN expression COMMA expression RPAREN
    (14) statement -> . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression EQ expression
    (22) expression -> . expression NE expression
    (23) expression -> . expression LE expression
    (24) expression -> . expression GE expression
    (25) expression -> . MINUS expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . NAME
    (29) expression -> . GET_REG LPAREN expression COMMA expression RPAREN

    $end            reduce using rule 1 (program -> statements .)
    NAME            shift and go to state 4
    WAIT            shift and go to state 6
    WAIT_MOTION     shift and go to state 8
    FOR             shift and go to state 9
    SET_REG_8BIT    shift and go to state 10
    SET_REG_16BIT   shift and go to state 11
    SET_REG_32BIT   shift and go to state 12
    POS_RAMP        shift and go to state 13
    SPD_RAMP        shift and go to state 14
    TORQ_RAMP       shift and go to state 15
    MINUS           shift and go to state 16
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 17
    GET_REG         shift and go to state 18

    statement                      shift and go to state 19
    expression                     shift and go to state 5

state 3

    (3) statements -> statement .

    NAME            reduce using rule 3 (statements -> statement .)
    WAIT            reduce using rule 3 (statements -> statement .)
    WAIT_MOTION     reduce using rule 3 (statements -> statement .)
    FOR             reduce using rule 3 (statements -> statement .)
    SET_REG_8BIT    reduce using rule 3 (statements -> statement .)
    SET_REG_16BIT   reduce using rule 3 (statements -> statement .)
    SET_REG_32BIT   reduce using rule 3 (statements -> statement .)
    POS_RAMP        reduce using rule 3 (statements -> statement .)
    SPD_RAMP        reduce using rule 3 (statements -> statement .)
    TORQ_RAMP       reduce using rule 3 (statements -> statement .)
    MINUS           reduce using rule 3 (statements -> statement .)
    LPAREN          reduce using rule 3 (statements -> statement .)
    NUMBER          reduce using rule 3 (statements -> statement .)
    GET_REG         reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    RBRACE          reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> NAME . EQUALS expression
    (28) expression -> NAME .

    EQUALS          shift and go to state 20
    PLUS            reduce using rule 28 (expression -> NAME .)
    MINUS           reduce using rule 28 (expression -> NAME .)
    TIMES           reduce using rule 28 (expression -> NAME .)
    DIVIDE          reduce using rule 28 (expression -> NAME .)
    LT              reduce using rule 28 (expression -> NAME .)
    GT              reduce using rule 28 (expression -> NAME .)
    EQ              reduce using rule 28 (expression -> NAME .)
    NE              reduce using rule 28 (expression -> NAME .)
    LE              reduce using rule 28 (expression -> NAME .)
    GE              reduce using rule 28 (expression -> NAME .)
    NAME            reduce using rule 28 (expression -> NAME .)
    WAIT            reduce using rule 28 (expression -> NAME .)
    WAIT_MOTION     reduce using rule 28 (expression -> NAME .)
    FOR             reduce using rule 28 (expression -> NAME .)
    SET_REG_8BIT    reduce using rule 28 (expression -> NAME .)
    SET_REG_16BIT   reduce using rule 28 (expression -> NAME .)
    SET_REG_32BIT   reduce using rule 28 (expression -> NAME .)
    POS_RAMP        reduce using rule 28 (expression -> NAME .)
    SPD_RAMP        reduce using rule 28 (expression -> NAME .)
    TORQ_RAMP       reduce using rule 28 (expression -> NAME .)
    LPAREN          reduce using rule 28 (expression -> NAME .)
    NUMBER          reduce using rule 28 (expression -> NAME .)
    GET_REG         reduce using rule 28 (expression -> NAME .)
    $end            reduce using rule 28 (expression -> NAME .)
    COMMA           reduce using rule 28 (expression -> NAME .)
    RPAREN          reduce using rule 28 (expression -> NAME .)
    RBRACE          reduce using rule 28 (expression -> NAME .)


state 5

    (14) statement -> expression .
    (15) expression -> expression . PLUS expression
    (16) expression -> expression . MINUS expression
    (17) expression -> expression . TIMES expression
    (18) expression -> expression . DIVIDE expression
    (19) expression -> expression . LT expression
    (20) expression -> expression . GT expression
    (21) expression -> expression . EQ expression
    (22) expression -> expression . NE expression
    (23) expression -> expression . LE expression
    (24) expression -> expression . GE expression

  ! shift/reduce conflict for MINUS resolved as shift
    NAME            reduce using rule 14 (statement -> expression .)
    WAIT            reduce using rule 14 (statement -> expression .)
    WAIT_MOTION     reduce using rule 14 (statement -> expression .)
    FOR             reduce using rule 14 (statement -> expression .)
    SET_REG_8BIT    reduce using rule 14 (statement -> expression .)
    SET_REG_16BIT   reduce using rule 14 (statement -> expression .)
    SET_REG_32BIT   reduce using rule 14 (statement -> expression .)
    POS_RAMP        reduce using rule 14 (statement -> expression .)
    SPD_RAMP        reduce using rule 14 (statement -> expression .)
    TORQ_RAMP       reduce using rule 14 (statement -> expression .)
    LPAREN          reduce using rule 14 (statement -> expression .)
    NUMBER          reduce using rule 14 (statement -> expression .)
    GET_REG         reduce using rule 14 (statement -> expression .)
    $end            reduce using rule 14 (statement -> expression .)
    COMMA           reduce using rule 14 (statement -> expression .)
    RPAREN          reduce using rule 14 (statement -> expression .)
    RBRACE          reduce using rule 14 (statement -> expression .)
    PLUS            shift and go to state 21
    MINUS           shift and go to state 22
    TIMES           shift and go to state 23
    DIVIDE          shift and go to state 24
    LT              shift and go to state 25
    GT              shift and go to state 26
    EQ              shift and go to state 27
    NE              shift and go to state 28
    LE              shift and go to state 29
    GE              shift and go to state 30

  ! MINUS           [ reduce using rule 14 (statement -> expression .) ]


state 6

    (5) statement -> WAIT . LPAREN expression RPAREN

    LPAREN          shift and go to state 31


state 7

    (26) expression -> LPAREN . expression RPAREN
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression EQ expression
    (22) expression -> . expression NE expression
    (23) expression -> . expression LE expression
    (24) expression -> . expression GE expression
    (25) expression -> . MINUS expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . NAME
    (29) expression -> . GET_REG LPAREN expression COMMA expression RPAREN

    MINUS           shift and go to state 16
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 17
    NAME            shift and go to state 33
    GET_REG         shift and go to state 18

    expression                     shift and go to state 32

state 8

    (6) statement -> WAIT_MOTION . LPAREN RPAREN

    LPAREN          shift and go to state 34


state 9

    (7) statement -> FOR . LPAREN statement COMMA expression COMMA statement RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 35


state 10

    (8) statement -> SET_REG_8BIT . LPAREN expression COMMA expression RPAREN

    LPAREN          shift and go to state 36


state 11

    (9) statement -> SET_REG_16BIT . LPAREN expression COMMA expression RPAREN

    LPAREN          shift and go to state 37


state 12

    (10) statement -> SET_REG_32BIT . LPAREN expression COMMA expression RPAREN

    LPAREN          shift and go to state 38


state 13

    (11) statement -> POS_RAMP . LPAREN expression COMMA expression RPAREN

    LPAREN          shift and go to state 39


state 14

    (12) statement -> SPD_RAMP . LPAREN expression COMMA expression RPAREN

    LPAREN          shift and go to state 40


state 15

    (13) statement -> TORQ_RAMP . LPAREN expression COMMA expression RPAREN

    LPAREN          shift and go to state 41


state 16

    (25) expression -> MINUS . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression EQ expression
    (22) expression -> . expression NE expression
    (23) expression -> . expression LE expression
    (24) expression -> . expression GE expression
    (25) expression -> . MINUS expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . NAME
    (29) expression -> . GET_REG LPAREN expression COMMA expression RPAREN

    MINUS           shift and go to state 16
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 17
    NAME            shift and go to state 33
    GET_REG         shift and go to state 18

    expression                     shift and go to state 42

state 17

    (27) expression -> NUMBER .
